--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/TypesCategory.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/TypesCategory.mxml
@@ -2,8 +2,8 @@
 <s:NavigatorContent xmlns:fx="http://ns.adobe.com/mxml/2009"
 					xmlns:mx="library://ns.adobe.com/flex/halo"
 					xmlns:s="library://ns.adobe.com/flex/spark"
-					
-					height="100%" width="100%">
+					height="100%" width="100%"
+					backgroundColor="#70737A">
 
 	<fx:Script>
 		<![CDATA[
@@ -25,19 +25,15 @@
 	</fx:Script>
 
 	<s:layout>
-
-		<s:VerticalLayout variableRowHeight="true" />
+		<s:VerticalLayout variableRowHeight="true"/>
 	</s:layout>
 
 	<s:List dataProvider="{ typeData }" height="100%" labelField="displayName" width="100%"
 			textAlign="center"
-			contentBackgroundColor="#5E6367"
-			itemRenderer="net.vdombox.ide.modules.wysiwyg.view.components.TypeItemRenderer"
-			useVirtualLayout="false">
+			contentBackgroundColor="#5E6367" itemRenderer="net.vdombox.ide.modules.wysiwyg.view.components.TypeItemRenderer" useVirtualLayout="false">
 
 		<s:layout>
-
-			<s:VerticalLayout variableRowHeight="true" />
+			<s:VerticalLayout variableRowHeight="true" gap="10"/>
 		</s:layout>
 	</s:List>
 </s:NavigatorContent>
