--- a/FlexTypes/VdomFlexBook/src/VdomFlexBook.mxml
+++ b/FlexTypes/VdomFlexBook/src/VdomFlexBook.mxml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:Application xmlns:mx="http://www.adobe.com/2006/mxml" layout="vertical" xmlns:controls="qs.controls.*" creationComplete="{creationComplete();}">
-	
+<mx:Application xmlns:controls="qs.controls.*"
+				xmlns:mx="http://www.adobe.com/2006/mxml"
+				layout="vertical"
+				creationComplete="{creationComplete();}">
+
 	<mx:Style>
 		.FlexBook {
 			color: #000000;
@@ -24,48 +27,57 @@
 		}
 		
 	</mx:Style>
-	
-	
-	<mx:Canvas width="100%" height="100%">
+
+
+	<mx:Canvas height="100%" width="100%">
 		<controls:FlexBook id="flexBook"
-			animateCurrentPageIndex="true" animatePagesOnTurn="true" activeGrabArea="corner" edgeAndCornerSize="50" itemSize="halfPage"
-			styleName="FlexBook" width="100%" height="100%" />
-					
+						   height="100%" styleName="FlexBook" width="100%"
+						   animateCurrentPageIndex="true" animatePagesOnTurn="true" activeGrabArea="corner" edgeAndCornerSize="50"
+						   itemSize="halfPage"/>
+
 	</mx:Canvas>
-	
+
 	<mx:Script>
 		<![CDATA[
+			import mx.containers.Canvas;
+			import mx.containers.VBox;
 			import mx.controls.Image;
 			import mx.states.SetStyle;
-			import mx.containers.VBox;
-			import mx.containers.Canvas;
-			
-			private function creationComplete():void {
-				var sources:String = Application.application.parameters['sources'];
-				var paddings:int = int(Application.application.parameters['paddings']);
-				var bgColor:String = Application.application.parameters['bgcolor'];
-				
-				var pageObjects:Array = sources.split(';');
-				
-				for each (var page:String in pageObjects) {
-					var pageCanvas:VBox = new VBox();
-					
-					flexBook.addChild(pageCanvas);
-					
-					if (bgColor != 'transparent')
-						pageCanvas.setStyle('backgroundColor', bgColor);
-						
-					pageCanvas.setStyle('paddingLeft', paddings);
-					pageCanvas.setStyle('paddingRight', paddings);
-					pageCanvas.setStyle('paddingTop', paddings);
-					pageCanvas.setStyle('paddingBottom', paddings);
-					
-					var pageImage:Image = new Image();
-					pageCanvas.addChild(pageImage);
+
+			private function creationComplete() : void
+			{
+				var sources : String = Application.application.parameters[ 'sources' ];
+				var paddings : int = int( Application.application.parameters[ 'paddings' ] );
+				var bgColor : String = Application.application.parameters[ 'bgcolor' ];
+
+				var pageObjects : Array = sources.split( ';' );
+				var pages : Array = [];
+
+				for each ( var page : String in pageObjects )
+				{
+
+					var pageCanvas : VBox = new VBox();
+
+//					flexBook.addChild( pageCanvas );
+
+					if ( bgColor != 'transparent' )
+						pageCanvas.setStyle( 'backgroundColor', bgColor );
+
+					pageCanvas.setStyle( 'paddingLeft', paddings );
+					pageCanvas.setStyle( 'paddingRight', paddings );
+					pageCanvas.setStyle( 'paddingTop', paddings );
+					pageCanvas.setStyle( 'paddingBottom', paddings );
+
+					var pageImage : Image = new Image();
+					pageCanvas.addChild( pageImage );
 					pageImage.percentWidth = 100;
 					pageImage.percentHeight = 100;
-					pageImage.source = pageCanvas;
-        		}				
+					pageImage.source = page;
+					
+					pages.push( pageCanvas );
+				}
+				
+				flexBook.content = pages;
 			}
 		]]>
 	</mx:Script>
