--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/components/ErrorView.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/components/ErrorView.mxml
@@ -1,23 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:NavigatorContent xmlns:fx="http://ns.adobe.com/mxml/2009" 
-					xmlns:s="library://ns.adobe.com/flex/spark" 
-					xmlns:mx="library://ns.adobe.com/flex/halo"
-					
-					width="100%" height="100%">
+<s:Group xmlns:fx="http://ns.adobe.com/mxml/2009"
+		 xmlns:s="library://ns.adobe.com/flex/spark">
+
 	<fx:Script>
 		<![CDATA[
 			import flash.events.Event;
-			
+
 			private function backButton_clickHandler() : void
 			{
 				dispatchEvent( new Event( "backButtonClicked" ) );
 			}
 		]]>
 	</fx:Script>
-	<s:Label text="Error:" left="70" top="70"/>
-	
-	<s:RichText id="errorTextLabel" 
-			 text="Error Happend" left="70" right="50" top="100" color="#FFFFFF" bottom="50"/>
-	
-	<s:Button label="Back to Login" right="10" bottom="10" click="backButton_clickHandler()"/>
-</s:NavigatorContent>
+
+	<s:Label text="Error:"
+			 left="70" top="70"/>
+
+	<s:RichText id="errorTextLabel"
+				text="Error Happend"
+				bottom="50" color="#FFFFFF" left="70" right="50" top="100"/>
+
+	<s:Button label="Back to Login"
+			  bottom="10" right="10"
+			  click="backButton_clickHandler()"/>
+</s:Group>
