--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/components/LoginView.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/components/LoginView.mxml
@@ -1,43 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:NavigatorContent xmlns:fx="http://ns.adobe.com/mxml/2009"
-					xmlns:mx="library://ns.adobe.com/flex/halo"
-					xmlns:s="library://ns.adobe.com/flex/spark">
+<s:Group xmlns:fx="http://ns.adobe.com/mxml/2009"
+		 xmlns:s="library://ns.adobe.com/flex/spark">
 
-	<s:VGroup styleName="loginForm"
-			  left="20" right="100" top="50"
-			  gap="10">
-		<s:HGroup width="100%"
-				  verticalAlign="middle"
-				  gap="20">
+	<fx:Script>
+		<![CDATA[
+			import mx.collections.ArrayList;
+
+			import net.vdombox.ide.core.events.LoginViewEvent;
+			import net.vdombox.ide.core.model.vo.LocaleVO;
+
+			import spark.events.IndexChangeEvent;
+
+			[Bindable]
+			public var languages : ArrayList;
+
+			[Bindable]
+			private var _selectedLanguage : *;
+
+			[Bindable]
+			public var username : String;
+
+			[Bindable]
+			public var password : String;
+
+			[Bindable]
+			public var hostname : String;
+
+			public function get selectedLanguage() : LocaleVO
+			{
+				return _selectedLanguage as LocaleVO;
+			}
+
+			public function set selectedLanguage( value : LocaleVO ) : void
+			{
+				_selectedLanguage = value;
+			}
+
+			private function selectLang_changeHandler() : void
+			{
+				dispatchEvent( new LoginViewEvent( LoginViewEvent.LANGUAGE_CHANGED ) );
+			}
+
+			private function submitButton_clickHandler() : void
+			{
+				dispatchEvent( new LoginViewEvent( LoginViewEvent.SUBMIT ) );
+			}
+
+			override protected function keyDownHandler( event : KeyboardEvent ) : void
+			{
+				if ( event.keyCode == 13 )
+					dispatchEvent( new LoginViewEvent( LoginViewEvent.SUBMIT ) );
+			}
+		]]>
+	</fx:Script>
+
+	<s:VGroup gap="10" styleName="loginForm"
+			  left="20" right="100" top="50">
+
+		<s:HGroup gap="20" width="100%"
+				  verticalAlign="middle">
+
 			<s:Label text="{ resourceManager.getString( 'LoginForm', 'username' ) }" width="100%"
 					 color="white" fontFamily="Verdana" fontSize="14" textAlign="right"/>
-			<s:TextInput id="username"
-						 width="240"/>
+
+			<s:TextInput focusEnabled="false" text="@{ username }" width="240"/>
+
 		</s:HGroup>
-		<s:HGroup width="100%"
-				  verticalAlign="middle"
-				  gap="20">
+
+		<s:HGroup gap="20" width="100%"
+				  verticalAlign="middle">
+
 			<s:Label text="{ resourceManager.getString( 'LoginForm', 'password' ) }" width="100%"
 					 color="white" fontFamily="Verdana" fontSize="14" textAlign="right"/>
-			<s:TextInput id="password"
-						 width="240"/>
+
+			<s:TextInput focusEnabled="false" text="@{ password }" width="240"/>
+
 		</s:HGroup>
-		<s:HGroup width="100%"
-				  verticalAlign="middle"
-				  gap="20">
+
+		<s:HGroup gap="20" width="100%"
+				  verticalAlign="middle">
+
 			<s:Label text="{ resourceManager.getString( 'LoginForm', 'hostname' ) }" width="100%"
 					 color="white" fontFamily="Verdana" fontSize="14" textAlign="right"/>
-			<s:TextInput id="hostname"
-						 width="240"/>
+
+			<s:TextInput focusEnabled="false" text="@{ hostname }" width="240"/>
+
 		</s:HGroup>
-		<s:HGroup width="100%"
-				  verticalAlign="middle"
-				  gap="20">
+
+		<s:HGroup gap="20" width="100%"
+				  verticalAlign="middle">
+
 			<s:Label text="{ resourceManager.getString( 'LoginForm', 'language' ) }" width="100%"
 					 color="white" fontFamily="Verdana" fontSize="14" textAlign="right"/>
+
 			<s:ComboBox id="selectLang"
-						width="240"/>
+						dataProvider="{ languages }" focusEnabled="false" labelField="description" width="240"
+						change="selectLang_changeHandler()"
+						selectedItem="@{ _selectedLanguage }"/>
+
 		</s:HGroup>
+
 	</s:VGroup>
 
 	<s:BitmapImage source="@Embed(source='../assets/login/vdom_name.png')"
@@ -45,33 +107,12 @@
 
 	<s:Group height="35" width="100%"
 			 bottom="0">
-		<s:Rect bottom="0" left="0" right="0" top="0">
-			<s:fill>
-				<s:LinearGradient rotation="90">
-					<s:entries>
-						<s:GradientEntry color="0xEBEBEB"
-										 ratio="0.0"/>
-						<s:GradientEntry color="0xC4C5C6"
-										 ratio="0.7"/>
-					</s:entries>
-				</s:LinearGradient>
-			</s:fill>
-		</s:Rect>
 
-		<s:Line left="0" right="0" top="1">
-			<s:stroke>
-				<s:SolidColorStroke color="0xC4C5C6"/>
-			</s:stroke>
-		</s:Line>
-
-		<s:Button id="exitButton"
-				  height="35" label="{ resourceManager.getString( 'LoginForm', 'quit_button' ) }" minWidth="100"
-				  fontFamily="Verdana" fontSize="14" left="-2" skinClass="net.vdombox.ide.core.view.skins.LoginButtonSkin"/>
-
-		<s:Button id="connectButton"
+		<s:Button id="submitButton"
 				  height="35" label="{ resourceManager.getString( 'LoginForm', 'ok_button' ) }" minWidth="100"
-				  fontFamily="Verdana" fontSize="14" right="-2" skinClass="net.vdombox.ide.core.view.skins.LoginButtonSkin"/>
+				  fontFamily="Verdana" fontSize="14" right="-2" skinClass="net.vdombox.ide.core.view.skins.InitialWindowButtonSkin"
+				  click="submitButton_clickHandler()"/>
 	</s:Group>
-</s:NavigatorContent>
+</s:Group>
 
 
