--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/components/Task.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/components/Task.mxml
@@ -1,39 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:ItemRenderer xmlns:fx="http://ns.adobe.com/mxml/2009" 
-		 xmlns:s="library://ns.adobe.com/flex/spark" 
-		 xmlns:mx="library://ns.adobe.com/flex/halo"
-		 
-		 width="100%"
-		 
-		 color="white">
-	
+<s:ItemRenderer xmlns:fx="http://ns.adobe.com/mxml/2009"
+				xmlns:mx="library://ns.adobe.com/flex/halo"
+				xmlns:s="library://ns.adobe.com/flex/spark"
+				width="100%"
+				color="white"
+				autoDrawBackground="false">
+
 	<fx:Script>
 		<![CDATA[
-			
 			[Bindable]
 			private var _description : String;
-			
+
 			[Bindable]
 			private var _status : String;
-			
+
 			public function set description( value : String ) : void
 			{
 				_description = value;
 			}
-			
+
 			public function set status( value : String ) : void
 			{
 				_status = value;
 			}
-			
 		]]>
 	</fx:Script>
-	
+
 	<s:layout>
-		<s:HorizontalLayout />
+		<s:HorizontalLayout/>
 	</s:layout>
-	
-	<s:Label text="{ _description }" width="100%" />
-	
-	<s:Label text="{ _status }" width="50" />
+
+	<s:Label text="{ _description }" width="100%"/>
+
+	<s:Label text="{ _status }" width="50"/>
+
 </s:ItemRenderer>
