git-svn-id: http://svn.vdombox.ru/flextools/trunk@6001 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/components/ErrorView.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/components/ErrorView.mxml
@@ -1,26 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:Group xmlns:fx="http://ns.adobe.com/mxml/2009"
-		 xmlns:s="library://ns.adobe.com/flex/spark">
+<s:SkinnableContainer xmlns:fx="http://ns.adobe.com/mxml/2009"
+					  xmlns:s="library://ns.adobe.com/flex/spark"
+					  skinClass="net.vdombox.ide.core.view.skins.ErrorViewSkin">
 
 	<fx:Script>
 		<![CDATA[
 			import flash.events.Event;
 
-			private function backButton_clickHandler() : void
+			import net.vdombox.ide.core.model.vo.ErrorVO;
+
+			import spark.components.Button;
+
+			[Bindable]
+			public var errorVO : ErrorVO;
+
+			[SkinPart( required="true" )]
+			public var backButton : Button;
+
+			override protected function partAdded( partName : String, instance : Object ) : void
+			{
+				super.partAdded( partName, instance );
+
+				if ( instance === backButton )
+					backButton.addEventListener( MouseEvent.CLICK, backButton_clickHandler );
+			}
+
+			private function backButton_clickHandler( event : MouseEvent ) : void
 			{
 				dispatchEvent( new Event( "backButtonClicked" ) );
 			}
 		]]>
 	</fx:Script>
 
-	<s:Label text="Error:"
-			 left="70" top="70"/>
+	<s:layout>
+		<s:VerticalLayout />
+	</s:layout>
+	
+	<s:RichText text="Error({ errorVO.code }): { errorVO.string }" width="100%"
+				color="#FFFFFF" fontFamily="Verdana"/>
 
-	<s:RichText id="errorTextLabel"
-				text="Error Happend"
-				bottom="50" color="#FFFFFF" left="70" right="50" top="100"/>
+	<s:RichText text="{ errorVO.detail }" width="100%"
+				color="#FFFFFF" fontFamily="Verdana"/>
 
-	<s:Button label="Back to Login"
-			  bottom="10" right="10"
-			  click="backButton_clickHandler()"/>
-</s:Group>
+</s:SkinnableContainer>
