--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/MainWindowSkin.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/MainWindowSkin.mxml
@@ -1,7 +1,5 @@
-<s:SparkSkin xmlns:components="net.vdombox.ide.core.view.components.*"
-			 xmlns:fx="http://ns.adobe.com/mxml/2009"
-			 xmlns:mx="library://ns.adobe.com/flex/mx"
-			 xmlns:s="library://ns.adobe.com/flex/spark"
+<s:SparkSkin xmlns:components="net.vdombox.ide.core.view.components.*" xmlns:fx="http://ns.adobe.com/mxml/2009" xmlns:mx="library://ns.adobe.com/flex/mx" xmlns:s="library://ns.adobe.com/flex/spark"
+			 
 			 height="400" width="500"
 			 alpha.disabledGroup="0.5">
 
@@ -11,8 +9,8 @@
 
 	<fx:Script>
 		<![CDATA[
-			static private const exclusions : Array = [ "backgroundRect", "contentGroup", "titleBar", "titleBarBackgroundRect", "statusText",
-				"borderBgFill" ];
+			static private const exclusions : Array = [ "backgroundRect", "contentGroup", "titleBar",
+														"titleBarBackgroundRect", "statusText", "borderBgFill" ];
 
 			override public function get colorizeExclusions() : Array
 			{
@@ -22,53 +20,62 @@
 	</fx:Script>
 
 	<s:states>
-		<s:State name="normal"/>
-		<s:State name="disabled" stateGroups="disabledGroup"/>
-		<s:State name="normalAndInactive" stateGroups="inactiveGroup"/>
-		<s:State name="disabledAndInactive" stateGroups="disabledGroup, inactiveGroup"/>
-	</s:states>
 
+		<s:State name="normal" />
+
+		<s:State name="disabled" stateGroups="disabledGroup" />
+
+		<s:State name="normalAndInactive" stateGroups="inactiveGroup" />
+
+		<s:State name="disabledAndInactive"
+				 stateGroups="disabledGroup, inactiveGroup" />
+	</s:states>
 	<!-- layer 1: background fill -->
+
 	<s:Rect id="backgroundRect"
 			bottom="0" left="0" right="0" top="0"
 			radiusX="7" radiusY="7">
 
 		<s:stroke>
-			<s:SolidColorStroke color="0xCCCCCC"/>
+
+			<s:SolidColorStroke color="0xCCCCCC" />
 		</s:stroke>
 
 		<s:fill>
+
 			<s:LinearGradient id="bgFill"
 							  rotation="90">
-				<s:GradientEntry color="0x333333"/>
-				<s:GradientEntry color="0x000000"/>
+
+				<s:GradientEntry color="0x333333" />
+
+				<s:GradientEntry color="0x000000" />
 			</s:LinearGradient>
 		</s:fill>
 	</s:Rect>
-
 	<!-- title bar background fill for when the title bar is inactive -->
+
 	<s:Group id="topMask"
 			 bottom="1" left="1" right="1" top="1">
 
 		<s:Rect height="100%" width="100%"
 				radiusX="7" radiusY="7">
+
 			<s:fill>
+
 				<s:SolidColor color="0x000000"
-							  alpha="1"/>
+							  alpha="1" />
 			</s:fill>
 		</s:Rect>
-
 	</s:Group>
-
 	<!-- layer 2: titlebar + content + status bar -->
+
 	<s:Group bottom="1" left="1" right="1" top="1"
 			 mask="{topMask}">
 
 		<s:TitleBar id="titleBar"
 					minHeight="50" width="100%"
-					skinClass="net.vdombox.ide.core.view.skins.MainWindowTitleBarSkin"
-					alpha.inactiveGroup="0.5"/>
-
+					alpha.inactiveGroup="0.5"
+					skinClass="net.vdombox.ide.core.view.skins.MainWindowTitleBarSkin" />
 		<!--<s:Group height="50" width="100%">
 
 			 <s:Rect height="100%" width="100%">
@@ -89,39 +96,47 @@
 				bottom="15" top="85">
 
 			<s:fill>
+
 				<s:LinearGradient rotation="90">
-					<s:GradientEntry color="0x4D5258"/>
-					<s:GradientEntry color="0x000000"/>
+
+					<s:GradientEntry color="0x4D5258" />
+
+					<s:GradientEntry color="0x000000" />
 				</s:LinearGradient>
 			</s:fill>
-
 		</s:Rect>
 
 		<s:Rect height="35" width="100%"
 				top="50">
 
 			<s:filters>
-				<mx:DropShadowFilter alpha=".5" angle="90"/>
+
+				<mx:DropShadowFilter alpha=".5" angle="90" />
 			</s:filters>
 
 			<s:fill>
+
 				<s:LinearGradient rotation="90">
-					<s:GradientEntry color="0xB5B6B8"/>
-					<s:GradientEntry color="0x77787C"/>
+
+					<s:GradientEntry color="0xB5B6B8" />
+
+					<s:GradientEntry color="0x77787C" />
 				</s:LinearGradient>
 			</s:fill>
 		</s:Rect>
 
 		<s:ButtonBar id="tabBar"
 					 height="20"
-					 left="100" skinClass="net.vdombox.ide.core.view.skins.TabBarSkin" top="30"
-					 requireSelection="true"/>
+					 left="100" top="30"
+					 requireSelection="true"
+					 skinClass="net.vdombox.ide.core.view.skins.TabBarSkin" />
 
 		<s:Group height="35" width="100%"
 				 top="50">
 
 			<s:layout>
-				<s:HorizontalLayout paddingLeft="100" verticalAlign="middle"/>
+
+				<s:HorizontalLayout paddingLeft="100" verticalAlign="middle" />
 			</s:layout>
 
 			<s:Group id="toolsetBar"
@@ -129,61 +144,71 @@
 
 				<s:layout>
 
-					<s:HorizontalLayout gap="0"/>
+					<s:HorizontalLayout gap="0" />
 				</s:layout>
 			</s:Group>
 
-			<mx:Spacer width="100%"/>
+			<mx:Spacer width="100%" />
 
 			<components:LoginButton id="loginButton"
-									height="100%" icon="@Embed('assets/main/logout.png')"
+									height="100%"
+									icon="@Embed('assets/main/logout.png')"
 									label="{ resourceManager.getString( 'Core_General', 'login_button_label' ) + ' ' + hostComponent.username.toUpperCase() }"
-									color="#292A2E" skinClass="net.vdombox.ide.core.view.skins.LoginButtonSkin"/>
-
+									color="#292A2E"
+									skinClass="net.vdombox.ide.core.view.skins.LoginButtonSkin" />
 		</s:Group>
-
 		<!-- content -->
-		<s:Group id="contentGroup"
-				 height.disabled="100%" height.disabledAndInactive="100%" height.normalAndInactive="100%" minHeight="0" minWidth="0" width="100%"
-				 bottom="15" top="90"/>
 
+		<s:Group id="contentGroup"
+				 height.disabled="100%" height.disabledAndInactive="100%"
+				 height.normalAndInactive="100%" minHeight="0" minWidth="0"
+				 width="100%"
+				 bottom="15" top="90" />
 		<!-- status bar -->
+
 		<s:Group id="statusBar"
 				 minHeight="15" width="100%"
 				 bottom="0">
-
 			<!-- status bar fill -->
+
 			<s:Rect bottom="0" left="0" right="0" top="0">
+
 				<s:fill>
-					<s:SolidColor color="0xCCCCCC"/>
+
+					<s:SolidColor color="0xCCCCCC" />
 				</s:fill>
 			</s:Rect>
-
 			<!-- status bar highlight -->
+
 			<s:Rect bottom="0" left="1" right="1" top="1">
+
 				<s:stroke>
-					<s:SolidColorStroke color="0xCCCCCC"/>
+
+					<s:SolidColorStroke color="0xCCCCCC" />
 				</s:stroke>
 			</s:Rect>
-
 			<!-- status text -->
+
 			<s:Label id="statusText"
 					 width="100%"
-					 bottom="2" color="0x585858" fontSize="10" left="10" right="10" top="2" verticalAlign="middle"
-					 maxDisplayedLines="1"/>
+					 bottom="2" color="0x585858" fontSize="10" left="10"
+					 right="10" top="2" verticalAlign="middle"
+					 maxDisplayedLines="1" />
 		</s:Group>
 	</s:Group>
 
 	<mx:Image id="settingsButton"
-			  source="@Embed('assets/login/logo.png')" x="20" y="10"
-			  buttonMode="true">
+			  source="@Embed('assets/login/logo.png')" x="20" y="10">
+
 		<mx:filters>
-			<s:GlowFilter color="0x000000"/>
+
+			<s:GlowFilter color="0x000000" />
 		</mx:filters>
 	</mx:Image>
-
 	<!-- layer 3: gripper -->
+
 	<s:Button id="gripper"
-			  bottom="3" right="3" skinClass="spark.skins.spark.windowChrome.GripperSkin"
-			  tabEnabled="false"/>
+			  bottom="3" right="3"
+			  skinClass="spark.skins.spark.windowChrome.GripperSkin"
+			  tabEnabled="false" />
 </s:SparkSkin>
