--- a/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/ApplicationItemRenderer.mxml
+++ b/IDE/v.02/modules/ApplicationsManagment/src/net/vdombox/ide/modules/applicationsManagment/view/components/ApplicationItemRenderer.mxml
@@ -7,7 +7,7 @@
 	width="100%" height="115"
 	buttonMode="true"
 				
-	creationComplete="creationCompleteHandler( event )">
+	creationComplete="creationCompleteHandler( event )" autoDrawBackground="false">
 	
 	<fx:Script>
 		<![CDATA[
